--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,6 @@
   <modules>
   	<module>Practice01</module>
   	<module>Practice02</module>
+  	<module>Chapter03</module>
   </modules>
 </project>
