--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,6 @@
   	<module>Practice01</module>
   	<module>Practice02</module>
   	<module>Chapter03</module>
+  	<module>Practice03</module>
   </modules>
 </project>
