--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
   	<module>Practice02</module>
   	<module>Chapter03</module>
   	<module>Practice03</module>
+  	<module>Chapter04</module>
   </modules>
 </project>
