--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
   	<module>Chapter03</module>
   	<module>Practice03</module>
   	<module>Chapter04</module>
+  	<module>Practice04</module>
   </modules>
 </project>
