--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
   	<module>Practice03</module>
   	<module>Chapter04</module>
   	<module>Practice04</module>
+  	<module>Practice05</module>
   </modules>
 </project>
